--- a/front/sme/public/index.html
+++ b/front/sme/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/SME-logos_transparent.png" />
+    <link rel="icon" href="%PUBLIC_URL%/Logo_background_purp.png" />
     <meta name="viewport" content="width=device-width, initial-scale=4" />
     <meta name="theme-color" content="#000000" />
     <meta
